--- a/Taxa de retorno simples e logaritmica.ipynb
+++ b/Taxa de retorno simples e logaritmica.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analisando a taxa de retorno simples e logaritimica das ações"
+    "# Analisando a taxa de retorno simples e logaritmica das ações"
    ]
   },
   {
