--- a/Taxa de retorno simples e logaritmica.ipynb
+++ b/Taxa de retorno simples e logaritmica.ipynb
@@ -1710,7 +1710,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vamos normalizar os valores para base 100 e protar um grafico onde nos será possivel a comparação"
+    "## Vamos normalizar os valores para base 100 e plotar um grafico onde nos será possivel a comparação"
    ]
   },
   {
