--- a/001 Taxa de retorno simples e logaritmica.ipynb
+++ b/001 Taxa de retorno simples e logaritmica.ipynb
@@ -1710,12 +1710,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vamos normalizar os valores para base 100 e plotar um grafico onde nos será possivel a comparação"
+    "## Vamos normalizar os valores para base 100 e plotar um grafico onde nos será possivel a comparação."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
