--- a/004 Analisando os riscos.ipynb
+++ b/004 Analisando os riscos.ipynb
@@ -394,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aqui calcularemos o Devio Padrão e a Variancia do preço ao longo do tempo\n",
+    "## Aqui calcularemos o Desvio Padrão e a Variancia do preço ao longo do tempo\n",
     "### Itau"
    ]
   },
